# face-server

./: .env.example  .gitignore  CHANGELOG_DEPENDENCY.md  Dockerfile  Makefile  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  example_usage.py  pyproject.toml  setup_dev.py
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_rename_metadata_column.py
app/: config.py  database.py  main.py
app/api/: applications.py  faces.py  websocket.py
app/core/: __init__.py  face_engine.py  storage.py
app/models/: __init__.py  application.py  face.py
app/schemas/: __init__.py  application.py  common.py  face.py
app/services/: application_service.py  face_service.py
app/static/: demo.html
app/utils/: __init__.py  response.py
docs/: API_CHECK_REPORT.md  API_MIGRATION.md  API_RESPONSE_FORMAT.md  API_USAGE.md  DEMO_GUIDE.md  DEPENDENCY_MANAGEMENT.md  DEV_VS_DOCKER.md  FACE_ENGINE_GUIDE.md  INSIGHTFACE_GUIDE.md  OSS_STORAGE_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  prd.md
tests/: conftest.py  test_applications.py  test_oss_storage.py
