[project]
name = "face-server"
version = "0.1.0"
description = "Face recognition server with FastAPI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "pillow>=10.2.0",
    "numpy>=1.26.3",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "opencv-python>=4.8.0",
    "oss2>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]
